# trpz-weather-app

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
app/: main.py
app/core/: context.py
app/core/config/: config.py  db.py  weather_api.py
app/database/: postgres.py
app/enums/: base.py  user.py
app/models/: __init__.py  base.py  user.py  weather_data.py
app/repositories/: base.py  interface.py  user.py  weather_data.py
app/schemas/: user.py  weather.py
app/services/: admin.py  user.py  weather.py
app/uow/: uow.py
app/utils/: hash_password.py
